[gd_scene load_steps=2 format=2]

[ext_resource path="res://PopupV3/PopUpWindow.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_top = 20.0
margin_right = 97.0
margin_bottom = 74.0
window_title = "Tips!"
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Make sure to get sleep!"
valign = 1
autowrap = true

[node name="WindowDialog2" type="WindowDialog" parent="."]
visible = true
margin_left = 211.0
margin_top = 278.0
margin_right = 308.0
margin_bottom = 332.0
window_title = "Tips!"
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="WindowDialog2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -27.0
margin_right = 48.5
margin_bottom = 27.0
text = "Balance your schedule!"
valign = 1
autowrap = true

[node name="WindowDialog3" type="WindowDialog" parent="."]
visible = true
margin_left = 347.0
margin_top = 40.0
margin_right = 444.0
margin_bottom = 94.0
window_title = "Tips!"
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="WindowDialog3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -27.0
margin_right = 48.5
margin_bottom = 27.0
text = "Try being smarter!"
valign = 1
autowrap = true

[node name="Help" type="Button" parent="."]
margin_right = 46.0
margin_bottom = 53.0
text = "Help"

[node name="Tips" type="Button" parent="."]
margin_left = 211.0
margin_top = 278.0
margin_right = 249.0
margin_bottom = 298.0
text = "Tips"

[node name="Suggestions" type="Button" parent="."]
margin_left = 347.0
margin_top = 40.0
margin_right = 435.0
margin_bottom = 60.0
text = "Suggestions"

[connection signal="button_up" from="Help" to="." method="_on_Help_button_up"]
[connection signal="button_up" from="Tips" to="." method="_on_Tips_button_up"]
[connection signal="button_up" from="Suggestions" to="." method="_on_Suggestions_button_up"]
